--- a/dashboard.html
+++ b/dashboard.html
@@ -49,6 +49,28 @@
                         <i class="fas fa-magic"></i> Start Generation
                     </button>
                 </div>
+                
+                <div class="option-card" id="studentManagementCard">
+                    <div class="option-icon">
+                        <i class="fas fa-users"></i>
+                    </div>
+                    <h3>Student Management</h3>
+                    <p>Add, edit, and manage students in your college database</p>
+                    <button class="btn btn-primary">
+                        <i class="fas fa-users-cog"></i> Manage Students
+                    </button>
+                </div>
+                
+                <div class="option-card" id="templateDesignerCard">
+                    <div class="option-icon">
+                        <i class="fas fa-paint-brush"></i>
+                    </div>
+                    <h3>Template Designer</h3>
+                    <p>Create and customize certificate templates with drag-and-drop canvas</p>
+                    <button class="btn btn-success">
+                        <i class="fas fa-palette"></i> Design Templates
+                    </button>
+                </div>
             </div>
 
             <!-- Student Management Section -->
@@ -121,7 +143,7 @@
                     </div>
                 </div>
             </div>
-        </main>
+        </div>
     </div>
 
     <!-- Add Student Modal -->
