feat: Enhance student management with search and bulk upload functionality

--- a/dashboard.html
+++ b/dashboard.html
@@ -155,7 +155,7 @@
                     <i class="fas fa-times"></i>
                 </button>
             </div>
-            <form id="addStudentForm" class="modal-form">
+            <form id="addStudentForm" class="modal-form" method="POST" action="/api/students">
                 <div class="form-row">
                     <div class="form-group">
                         <label for="studentName">Full Name *</label>
