--- a/dashboard.html
+++ b/dashboard.html
@@ -71,6 +71,28 @@
                         <i class="fas fa-palette"></i> Design Templates
                     </button>
                 </div>
+
+                <div class="option-card" id="certificateExtractionCard">
+                    <div class="option-icon">
+                        <i class="fas fa-file-export"></i>
+                    </div>
+                    <h3>Certificate Extraction</h3>
+                    <p>Extract text and data from existing certificates using OCR</p>
+                    <button class="btn btn-primary">
+                        <i class="fas fa-file-import"></i> Extract Data
+                    </button>
+                </div>
+
+                <div class="option-card" id="textChangerCard">
+                    <div class="option-icon">
+                        <i class="fas fa-font"></i>
+                    </div>
+                    <h3>Text Changer</h3>
+                    <p>Modify text styles, fonts, and formatting in certificates</p>
+                    <button class="btn btn-primary">
+                        <i class="fas fa-text-height"></i> Change Text
+                    </button>
+                </div>
             </div>
 
             <!-- Student Management Section -->
